Mon Feb  1 11:09:51 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac doc/userguide.sgml: update documentation

Fri Jan 29 19:56:51 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsodbc.h src/odbc/connectparams.c:
	* src/odbc/odbc.c src/tds/config.c win32/winsetup.c:
	- complete connection string if possible

Fri Jan 29 15:08:07 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/setup.rc: make popup window always visible

Fri Jan 29 15:04:27 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: peephole optimization

Thu Jan 28 14:30:21 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h src/tds/log.c:
	- improve (a lot!) log performance under windows using append mode

Thu Jan 28 14:14:04 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: does not overwrite error with other calls

Thu Jan 28 11:06:05 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/sspi.c: remove wrong TODO comment

Thu Jan 28 09:53:35 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c: reuse string constants

Thu Jan 28 00:31:25 EST 2010	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c more checks for NULL DBPROCESS/LOGINREC

Thu Jan 28 00:15:31 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: remove small warning

Wed Jan 27 16:37:25 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: fix format error which could cause core

Wed Jan 27 16:34:28 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/sspi.c: fix thread issue with SSPI

Wed Jan 27 16:29:44 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h src/tds/Makefile.am src/tds/ptw32_MCS_lock.c:
	* src/tds/win_mutex.c:
	- implement pthread compatible mutex for windows (partial code from
	  pthread-win32, LGPL 2 too)

Wed Jan 27 13:20:42 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>